// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pbehavior-recurrence-rule-exceptions-field Renders \`pbehavior-exceptions-field\` with custom props 1`] = `
<div>
  <h3
    class="my-3 grey--text"
  >
    Exception dates
  </h3>
  <hr
    class="v-divider theme--light"
  />
  <pbehavior-exceptions-list-stub
    exceptions="[object Object]"
  />
  <div
    disabled="disabled"
    value="[object Object],[object Object]"
    with-exdate-type="true"
  >
    <c-alert-stub
      type="info"
    >
      No exceptions added yet
    </c-alert-stub>
     
    <div
      class="flex"
    >
      <button
        class="ml-0 v-btn v-btn--outline v-btn--depressed theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Add an exception date
        </div>
      </button>
    </div>
    <div
      class="flex"
    >
      <button
        class="mr-0 v-btn v-btn--outline v-btn--depressed theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Choose list of exceptions
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`pbehavior-recurrence-rule-exceptions-field Renders \`pbehavior-exceptions-field\` with default props 1`] = `
<div>
  <h3
    class="my-3 grey--text"
  >
    Exception dates
  </h3>
  <hr
    class="v-divider theme--light"
  />
  <!---->
  <div
    value=""
  >
    <c-alert-stub
      type="info"
      value="true"
    >
      No exceptions added yet
    </c-alert-stub>
     
    <div
      class="flex"
    >
      <button
        class="ml-0 v-btn v-btn--outline v-btn--depressed theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Add an exception date
        </div>
      </button>
    </div>
    <div
      class="flex"
    >
      <button
        class="mr-0 v-btn v-btn--outline v-btn--depressed theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Choose list of exceptions
        </div>
      </button>
    </div>
  </div>
</div>
`;
